# esp32p4_dev

./: CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.old
components/gp8413_sdc/: CMakeLists.txt  README.md  gp8413_sdc.c  gp8413_sdc.h  gp8413_sdc_testing.c  gp8413_sdc_testing.h
components/gp8413_sdc/datasheet/: Description_GP81413.md
components/m5_4relay/: CMakeLists.txt  m5_4relay.c  m5_4relay.h
components/ssd1306/: CMakeLists.txt  font_petme128_8x8.h  ssd1306.c  ssd1306.h  ssd1306_fonts.c  ssd1306_fonts.h
main/: CMakeLists.txt  cmd_i2ctools.c  cmd_i2ctools.h  i2ctools_example_main.c  util.h
